chore(seed): サンプルデータ投入スクリプトを追加\n\n- scripts/seed.js: 既定で E12345 の過去60日分 出/退 を投入\n- npm script: npm run seed で実行

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon src/server.js",
     "start": "node src/server.js",
-    "lint": "echo 'No linter configured'"
+    "lint": "echo 'No linter configured'",
+    "seed": "node scripts/seed.js"
   },
   "dependencies": {
     "express": "^4.19.2",
