--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "pg": "^8.11.3",
     "better-sqlite3": "^11.0.0",
+    "@google-cloud/storage": "^7.10.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "zod": "^3.23.8"
